--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -17,18 +17,41 @@ a {
 	color : #8d95a5;
 }
 a:hover{
-	color : #ffffffb2;
+	color : rgb(179, 179, 179);
 }
 .text-secondary{
 	color : #3cc4b6!important;
+	font-size:  calc(1rem + .9vw);;
 }
 .styleRoomLine{
-	border-bottom: solid 2px #ABABAB;
+	border-bottom: solid 2px rgb(224, 224, 224);
 	width : 50%;
 	padding : 15px 0 2px 10px;
 	cursor: pointer;
 
 }
 .styleRoomLine:hover{
+
 	color : #1c2a4a;
+}
+a.styleRoomLine:hover{
+	color : #ABABAB;
+}
+
+.occupied{
+	position: relative;
+	background-color: red;
+	border-radius: 50%;
+	width : 15px;
+	height : 15px;
+	border : solid 1px deeppink;
+}
+.available{
+	position: relative;
+	background-color: green;
+	border-radius: 50%;
+	width : 15px;
+	height : 15px;
+	border : solid 1px greenyellow;
+
 }
