--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -81,6 +81,12 @@ a.styleRoomLine:hover{
 	color : #FFFFFF;
 	margin : 10px;
 	-webkit-box-reflect: below 0 linear-gradient(transparent 50%, rgba(0,0,0,.2));
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: stretch;
+	align-content: stretch;	
 }
 .boxViolet{
 	background: linear-gradient(to bottom right, #4d54c7, #8d93f9);
@@ -97,6 +103,21 @@ a.styleRoomLine:hover{
 	color : #FFFFFF;
 	margin : 10px;
 	-webkit-box-reflect: below 0 linear-gradient(transparent 50%, rgba(0,0,0,.2));
+}
+
+.boxGreen{
+	background: linear-gradient(to  right, #00e923, #a0e700);
+	border-radius: 5px;
+	padding:10px;
+	color : #FFFFFF;
+	margin : 10px;
+	-webkit-box-reflect: below 0 linear-gradient(transparent 50%, rgba(0,0,0,.2));
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: stretch;
+	align-content: stretch;	
 }
 .boxBlueNestor{
 	background: linear-gradient(to bottom right, #2f3666, #28305b);
@@ -133,6 +154,16 @@ a.styleRoomLine:hover{
 	align-items: stretch;
 	align-content: space-around;
 	height : 60vh;
+}
+.clientListStyle{
+	margin : 50px 0;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: stretch;
+	align-content: flex-start;
+	width: 90vw;
 }
 .roomStyle{
 	margin : 0px 0;
