--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -106,7 +106,21 @@ a.styleRoomLine:hover{
 }
 
 .boxGreen{
-	background: linear-gradient(to  right, #00e923, #a0e700);
+	background: linear-gradient(to right, #2caf1f, #a0e700);
+	border-radius: 5px;
+	padding:10px;
+	color : #FFFFFF;
+	margin : 10px;
+	-webkit-box-reflect: below 0 linear-gradient(transparent 50%, rgba(0,0,0,.2));
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: stretch;
+	align-content: stretch;	
+}
+.boxRed{
+	background: Linear-gradient(to right, #ee121e,#f0334e);
 	border-radius: 5px;
 	padding:10px;
 	color : #FFFFFF;
